--- a/style.css
+++ b/style.css
@@ -2,4 +2,60 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  font-family: sans-serif;
+  line-height: 130%;
+}
+
+a {
+  text-decoration: none;
+
+}
+
+header {
+  text-align: center;
+}
+
+header h1 {
+  font-family: sans-serif;
+  color: #AF3230;
+  margin-bottom: 25px;
+
+}
+
+
+header>nav a {
+  padding: 0 10px 0 10px;
+  background-color: #AF3230;
+  padding: 10px;
+  text-decoration: none;
+  color: white;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
+section figure {
+  text-align: center;
+}
+
+section#featured-property>p {
+  text-align: center;
+  width: 800px;
+  margin: 20px auto;
+}
+
+figure>figcaption {
+  font-size: 12px;
+  text-align: center;
+}
+
+section#details>div {
+  float: left;
+  width: 25%;
+  text-align: center;
+  background-color: #AF3230;
+  color: hsl(2, 55%, 20%);
+}
+
+section#details a {
+  color: white;
 }
